Closed
Bug 199484
Opened 22 years ago
Closed 22 years ago
XML pretty printing regressed
Categories
(Core :: XML, defect)
Core
XML
Tracking
()
RESOLVED
FIXED
People
(Reporter: axel, Assigned: axel)
References
()
Details
Attachments
(1 file)
2.35 KB,
patch
|
axel
:
review+
axel
:
superreview+
asa
:
approval1.4a-
|
Details | Diff | Splinter Review |
the landing of the compiled stylesheets regressed xml pretty printing.
The least reason is the wrong contract ID in nsXMLPrettyPrinter
Assignee | ||
Comment 1•22 years ago
|
||
taking.
Drivers, this is a small regression with limited scope from landing bug 185797.
Low risk, tested patch coming up today.
Assignee: heikki → axel
Flags: blocking1.4a?
Assignee | ||
Comment 2•22 years ago
|
||
rationale:
type=text/xsl or type=text/xslt are both indicating mime types, and neither is.
So peterv as module owner and I settled for type=xslt, specific enough and not
confusing or standards weakening.
Assignee | ||
Comment 3•22 years ago
|
||
Comment on attachment 118668 [details] [diff] [review]
change the contractID to type=xslt
got r/sr from peterv on irc, requesting driver approval to land for 1.4a.
risk analysis in #2.
Attachment #118668 -
Flags: superreview+
Attachment #118668 -
Flags: review+
Attachment #118668 -
Flags: approval1.4a?
Comment 4•22 years ago
|
||
Comment on attachment 118668 [details] [diff] [review]
change the contractID to type=xslt
please land first thing in beta. thanks.
Attachment #118668 -
Flags: approval1.4a? → approval1.4a-
Assignee | ||
Comment 5•22 years ago
|
||
checked in almost first thing in 1.4b. only cls and dbaron were faster.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•22 years ago
|
Flags: blocking1.4a? → blocking1.4a-
You need to log in
before you can comment on or make changes to this bug.
Description
•