bug 199484, xml pretty printing regressed, fix the contract ID for XSLT document transformer, r/sr=peterv